# py-wc

./: .gitignore  README.MD  pyproject.toml  rough.py  test.txt  text.txt
piping/: __main__.py  counter.py
piping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
wc/: __main__.py  counter.py  string_generator.py
