[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "piping"
version = "1.1.0"

authors = [
    {name = "Shakhlyn", email= "shakhlyn.sh.du@gmail.com"},
    
]
description = "Practice project for processing building wc tool similar to wc in UNIX"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["word-counter", "wc"]


# dynamic = ["version"]

[project.scripts]
wc = "wc.__main__:ccwc"
